--- a/index.html
+++ b/index.html
@@ -13,36 +13,49 @@
 			<th>Email</th>
 			<th>Address</th>
 			<th>Admin</th>
+			<th>Logo</th>
 		</tr>
 		<tr>
 			<td>Webmaster</td>
 			<td>example@email.com</td>
 			<td>Demoland 123</td>
 			<td>X</td>
+			<td></td>
 		</tr>
 		<tr>
 			<td>User123</td>
 			<td>example@email.com</td>
 			<td>Userplace 321</td>
 			<td>-</td>
+			<td></td>
 		</tr>
 		<tr>
 			<td>AnotherUser222</td>
 			<td>example@email.com</td>
 			<td>AnotherPlace 21</td>
 			<td>-</td>
+			<td></td>
 		</tr>
 	</table>
 
 	<form>
 		<br />
-		Username: <input id="input-username" /> <br />
-		Email: <input id="input-email" /> <br />
-		Address: <input id="input-address" /> <br />
-		Admin: <input type="checkbox" id="input-admin"/> <br />
+		<label for="input-username">Username: </label>
+		<input id="input-username" /> <br />
+		<label for="input-email">Email:</label>
+		<input id="input-email" /> <br />
+		<label for="input-address">Address: </label>
+		<input id="input-address" /> <br />
+		<label for="input-admin">Admin: </label>
+		<input type="checkbox" id="input-admin"/> <br />
 		<button type="submit" id="submit-data">Submit</button>
 		<button id="empty-data">Reset</button>
 	</form>
+
+	<div id="image-container">
+		<input type="file" id="input-image" accept="image/*">
+		<button id="upload">Add Image</button>
+	</div>
 
 	<script src="src/index.js">
 	</script>
