--- a/index.html
+++ b/index.html
@@ -8,34 +8,37 @@
 
 <body>
 	<table>
-		<tr>
-			<th>Username</th>
-			<th>Email</th>
-			<th>Address</th>
-			<th>Admin</th>
-			<th>Logo</th>
-		</tr>
-		<tr>
-			<td>Webmaster</td>
-			<td>example@email.com</td>
-			<td>Demoland 123</td>
-			<td>X</td>
-			<td></td>
-		</tr>
-		<tr>
-			<td>User123</td>
-			<td>example@email.com</td>
-			<td>Userplace 321</td>
-			<td>-</td>
-			<td></td>
-		</tr>
-		<tr>
-			<td>AnotherUser222</td>
-			<td>example@email.com</td>
-			<td>AnotherPlace 21</td>
-			<td>-</td>
-			<td></td>
-		</tr>
+		<thead>
+			<tr>
+				<th>Username</th>
+				<th>Email</th>
+				<th>Address</th>
+				<th>Admin</th>
+			</tr>
+		</thead>
+		<tbody>
+			<tr>
+				<td>Webmaster</td>
+				<td>example@email.com</td>
+				<td>Demoland 123</td>
+				<td>X</td>
+				<td></td>
+			</tr>
+			<tr>
+				<td>User123</td>
+				<td>example@email.com</td>
+				<td>Userplace 321</td>
+				<td>-</td>
+				<td></td>
+			</tr>
+			<tr>
+				<td>AnotherUser222</td>
+				<td>example@email.com</td>
+				<td>AnotherPlace 21</td>
+				<td>-</td>
+				<td></td>
+			</tr>
+		</tbody>
 	</table>
 
 	<form>
@@ -47,7 +50,7 @@
 		<label for="input-address">Address: </label>
 		<input id="input-address" /> <br />
 		<label for="input-admin">Admin: </label>
-		<input type="checkbox" id="input-admin"/> <br />
+		<input type="checkbox" id="input-admin" /> <br />
 		<input type="file" id="input-image" accept="image/*">
 		<button type="submit" id="submit-data">Submit</button>
 		<button id="empty-data">Reset</button>
