--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 		<input type="checkbox" id="input-admin" /> <br />
 		<input type="file" id="input-image" accept="image/*">
 		<button type="submit" id="submit-data">Submit</button>
-		<button id="empty-data">Reset</button>
+		<button id="empty-table">Reset</button>
 	</form>
 
 	<script src="src/index.js">
